--- a/src/App.css
+++ b/src/App.css
@@ -40,9 +40,9 @@ body {
   grid-column: 1 /-1;
   background-color: rgba(0, 0, 0, 0.75);
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: space-around;
+  /* flex-direction: row;
+  align-items: inherit; */
+  justify-content: right;
   padding: 0.7rem;
   word-wrap: break-word;
   word-break: break-all;
@@ -50,7 +50,8 @@ body {
 
 .output .previous-operand {
   color: white;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
+  margin-right: 10px;
 }
 
 .output .current-operand {
